kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
  namespace: homework
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: nginx
