kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
spec:
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /homepage
        pathType: Exact
        backend:
          service:
            name: nginx-clusterip
            port:
              name: http
  ingressClassName: nginx
